# matrix-calculator-cpp

./: CMakeLists.txt  README.md
headers/: allHeaders.hpp  matrix.hpp  matrixManager.hpp  testClass.hpp
src/: main.cpp  matrix.cpp  matrixManager.cpp  testClass.cpp
tests/: main-ut.cpp  matrix-ut.cpp  matrixManager-ut.cpp
